commited by anisha

--- a/src/ShowGuidanceFiles/compareAndSelectScenarioEn.html
+++ b/src/ShowGuidanceFiles/compareAndSelectScenarioEn.html
@@ -103,7 +103,7 @@
 													<li> <b>Forecast Error (%):</b> this error is calculated using the
 														Weighted Absolute Percentage Error (WAPE) calculation. If the
 														forecast error is highlighted in <span
-															style="color: rgb(17, 139, 112);">green text</span>, this
+															style="color:#86cd99">green text</span>, this
 														forecast has the lowest forecast error out of the available
 														forecasts. Example WAPE calculation using the default 6-month
 														time window: <img class="img-fluid"
@@ -136,7 +136,7 @@
 												<i class="fa fa-exclamation-triangle" aria-hidden="true"></i> symbol
 												next to the Planning Unit, there is
 												no forecast selected.
-												If there is a <i class="fa fa-check-square" aria-hidden="true"></i>
+												If there is a <i class="fa fa-check-square" aria-hidden="true" style="color: #86cd99;"></i>
 												symbol next to
 												the Planning Unit,
 												there is a forecast selected. Repeat steps 1-3 for each Planning Unit
@@ -151,7 +151,7 @@
 											</li>
 
 										</ol>
-										<p>Note: Users may select multiple tree forecasts as their final forecast, which
+										<p style="font-style: italic;">Note: Users may select multiple tree forecasts as their final forecast, which
 											will aggregate the monthly forecast quantities; however, users cannot select
 											multiple consumption forecasts or a combination of consumption and tree
 											forecasts.
