--- a/src/ShowGuidanceFiles/compareAndSelectScenarioFr.html
+++ b/src/ShowGuidanceFiles/compareAndSelectScenarioFr.html
@@ -101,7 +101,7 @@
 													<li> <b>Erreur de prévision (%) :</b> cette erreur est calculée à l'aide du
 														Calcul du pourcentage d'erreur absolue pondérée (WAPE). Si le
 														l'erreur de prévision est mise en évidence dans <span
-															style="color: rgb(17, 139, 112);">texte vert</span>, ceci
+															style="color: #86cd99">texte vert</span>, ceci
 														la prévision présente l'erreur de prévision la plus faible parmi les prévisions disponibles
 														prévisions. Exemple de calcul WAPE utilisant la période par défaut de 6 mois
 														fenêtre horaire : <img class="img-fluid"
@@ -137,7 +137,7 @@
 												Symbole <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
 												à côté de l'unité de planification, il y a
 												aucune prévision sélectionnée.
-												S'il y a un <i class="fa fa-check-square" aria-hidden="true"></i>
+												S'il y a un <i class="fa fa-check-square" aria-hidden="true" style="color: #86cd99;"></i>
 												symbole à côté
 												la Cellule de Planification,
 												une prévision est sélectionnée. Répétez les étapes 1 à 3 pour chaque unité de planification
@@ -150,7 +150,7 @@
 													Prévisions</a> pour vérifier toutes les unités de planification ensemble.
 											</li>
 										</ol>
-										<p>Remarque : Les utilisateurs peuvent sélectionner plusieurs prévisions d'arbres comme prévision finale, ce qui
+										<p style="font-style: italic;">Remarque : Les utilisateurs peuvent sélectionner plusieurs prévisions d'arbres comme prévision finale, ce qui
 											regroupera les quantités prévisionnelles mensuelles ; cependant, les utilisateurs ne peuvent pas sélectionner
 											plusieurs prévisions de consommation ou une combinaison de consommation et d'arbre
 											prévisions.
