--- a/src/ShowGuidanceFiles/compareAndSelectScenarioSp.html
+++ b/src/ShowGuidanceFiles/compareAndSelectScenarioSp.html
@@ -105,7 +105,7 @@
 														el
 														Cálculo del error porcentual absoluto ponderado (WAPE). si el
 														el error de pronóstico se resalta en <span
-															style="color: rgb(17, 139, 112);">texto verde</span>, esto
+															style="color:#86cd99">texto verde</span>, esto
 														El pronóstico tiene el error de pronóstico más bajo de los
 														disponibles.
 														previsiones. Ejemplo de cálculo de WAPE utilizando el período
@@ -152,7 +152,7 @@
 												<i class="fa fa-exclamation-triangle" aria-hidden="true"></i> símbolo
 												Al lado de la Unidad de Planificación, hay
 												no se seleccionó ningún pronóstico.
-												Si hay un <i class="fa fa-check-square" aria-hidden="true"></i>
+												Si hay un <i class="fa fa-check-square" aria-hidden="true" style="color: #86cd99;"></i>
 												símbolo al lado de
 												la Unidad de Planificación,
 												hay un pronóstico seleccionado. Repita los pasos 1-3 para cada unidad de planificación
@@ -165,7 +165,7 @@
 													Previsión</a> para verificar todas las unidades de planificación juntas.
 											</li>
 										</ol>
-										<p>Nota: Los usuarios pueden seleccionar varios pronósticos de árboles como pronóstico final, lo que
+										<p style="font-style: italic;">Nota: Los usuarios pueden seleccionar varios pronósticos de árboles como pronóstico final, lo que
 											agregará las cantidades previstas mensualmente; sin embargo, los usuarios no pueden seleccionar
 											Múltiples pronósticos de consumo o una combinación de consumo y árbol.
 											previsiones.
