--- a/src/ShowGuidanceFiles/compareAndSelectScenarioEn.html
+++ b/src/ShowGuidanceFiles/compareAndSelectScenarioEn.html
@@ -100,16 +100,9 @@
 											<li>Review available forecasts using the following information on the
 												screen:
 												<ul type="a">
-													<li> <b>Forecast Error (%):</b> this error is calculated using the
-														Weighted Absolute Percentage Error (WAPE) calculation. If the
-														forecast error is highlighted in <span
-															style="color:#86cd99">green text</span>, this
-														forecast has the lowest forecast error out of the available
-														forecasts. Example WAPE calculation using the default 6-month
-														time window: <img class="img-fluid"
-															src="/ForecastError-Formula.png"><br>If 6 months of data is
-														not available, QAT will utilize as many months as available and
-														denote it in this column.</li>
+													
+													<li> <b>Forecast Error (%):</b> this error is calculated using the Weighted Absolute Percentage Error (WAPE) calculation in the same manner as it is calculated in the Consumption Extrapolation screen. If the forecast error is highlighted in <span
+														style="color:#86cd99">green text</span>, this forecast has the lowest forecast error out of the available forecasts. </li>
 													<li> <b>Compare to Consumption Forecast:</b> QAT compares available
 														Consumption Forecasts and Tree Forecasts. For any Tree
 														Forecasts, QAT will flag the percentage above the highest or
@@ -129,6 +122,20 @@
 																style="color: rgb(128, 0, 128); font-style: italic;">bolded
 																italicized purple</span></b> data fall within the
 														forecast period. </li>
+														<li><b>Viewing the forecasts in calendar year or fiscal year aggregations:</b>
+															by default, QAT shows the forecast in monthly figures, but users have the 
+															option to view an aggregation of those figures by calendar year or by fiscal
+															 year (and defining the start/end of the fiscal year that 
+															 works in their context).
+															 <ul>
+																<li>
+																	When choosing to view by calendar/fiscal year, a new table appears 
+																	between the graph and the detailed data table. This new table shows 
+																	the aggregate forecast values by calendar or fiscal year, and denotes 
+																	the number of months used in the calculation for that year. 
+																</li>
+															 </ul> 
+														</li>
 												</ul>
 											</li>
 											<li>Select the final forecast in the Compare & Select table. If there is a
@@ -147,6 +154,14 @@
 												continue forward to the <a href="/#/forecastReport/forecastOutput"
 													target="_blank" style="text-decoration: underline;">Monthly
 													Forecast</a> to verify all planning units together.
+
+											</li>
+											<li>
+												Repeat steps 1-3 for each Planning Unit and Region until no more <i class="fa fa-exclamation-triangle"
+												aria-hidden="true"></i> symbols remain. Once completed, continue forward to the <a href="/#/forecastReport/forecastOutput"
+												target="_blank" style="text-decoration: underline;">Monthly
+												Forecast</a>
+												to verify all planning units together. 
 
 											</li>
 
