--- a/src/ShowGuidanceFiles/compareAndSelectScenarioFr.html
+++ b/src/ShowGuidanceFiles/compareAndSelectScenarioFr.html
@@ -98,16 +98,8 @@
 </li>
 											<li>Examinez les prévisions disponibles en utilisant les informations suivantes sur le
 												écran:<ul type="a">
-													<li> <b>Erreur de prévision (%) :</b> cette erreur est calculée à l'aide du
-														Calcul du pourcentage d'erreur absolue pondérée (WAPE). Si le
-														l'erreur de prévision est mise en évidence dans <span
-															style="color: #86cd99">texte vert</span>, ceci
-														la prévision présente l'erreur de prévision la plus faible parmi les prévisions disponibles
-														prévisions. Exemple de calcul WAPE utilisant la période par défaut de 6 mois
-														fenêtre horaire : <img class="img-fluid"
-															src="/ForecastError-Formula.png"><br>Si 6 mois de données sont
-														non disponible, QAT utilisera autant de mois que disponibles et
-														notez-le dans cette colonne.</li>
+													<li> <b>Erreur de prévision (%) :</b> cette erreur est calculée à l'aide du calcul du pourcentage d'erreur absolue pondérée (WAPE) de la même manière qu'elle est calculée dans l'écran Extrapolation de la consommation. Si l'erreur de prévision est mise en évidence dans <span
+														style="color:#86cd99">texte vert</span>, cette prévision présente l'erreur de prévision la plus faible parmi les prévisions disponibles. </li>
 													<li> <b>Comparer aux prévisions de consommation :</b> les comparaisons QAT disponibles
 														Prévisions de consommation et prévisions d'arbres. Pour n'importe quel arbre
 														Prévisions, QAT signalera le pourcentage supérieur au plus élevé ou
@@ -129,6 +121,20 @@
 																les données en italique violet</span></b> se situent dans la
 														période de prévision.
 </li>
+<li><b>Affichage des prévisions sous forme d'agrégations d'année civile ou d'exercice fiscal :</b>
+	par défaut, QAT affiche les prévisions en chiffres mensuels, mais les utilisateurs ont le 
+	possibilité d'afficher une agrégation de ces chiffres par année civile ou par exercice
+	 année (et en définissant le début/la fin de l’année fiscale qui 
+	 fonctionne dans son contexte).
+	 <ul>
+		<li>
+			Lorsque vous choisissez d'afficher par année civile/fiscale, un nouveau tableau apparaît 
+			entre le graphique et le tableau de données détaillées. Ce nouveau tableau montre 
+			les valeurs prévisionnelles globales par année civile ou fiscale, et désigne 
+			le nombre de mois utilisé dans le calcul pour cette année. 
+		</li>
+	 </ul> 
+</li>
 												</ul>
 											</li>
 											<li>
@@ -148,6 +154,14 @@
 												continuez vers le <a href="/#/forecastReport/forecastOutput"
 													target="_blank" style="text-decoration: underline;">Mensuel
 													Prévisions</a> pour vérifier toutes les unités de planification ensemble.
+											</li>
+											<li>
+												Répétez les étapes 1 à 3 pour chaque unité de planification et région jusqu'à ce qu'il n'y ait plus de <i class="fa fa-exclamation-triangle"
+												Les symboles aria-hidden="true"></i> restent. Une fois terminé, continuez vers le <a href="/#/forecastReport/forecastOutput"
+												target="_blank" style="text-decoration: underline;">Mensuel
+												Prévisions</a>
+												pour vérifier toutes les unités de planification ensemble. 
+
 											</li>
 										</ol>
 										<p style="font-style: italic;">Remarque : Les utilisateurs peuvent sélectionner plusieurs prévisions d'arbres comme prévision finale, ce qui
