--- a/src/ShowGuidanceFiles/TreeTableSp.html
+++ b/src/ShowGuidanceFiles/TreeTableSp.html
@@ -86,7 +86,7 @@ a {
 													</tr>
 													<tr>
 														<td style="background: #a7c6ed;color: #002f6c;"><b>Funil
-																<i><img class="img-fluid" src="/funnel1-2.png"></i></b>
+																<i><img class="img-fluid" src="/funnel.png"></i></b>
 														</td>
 														<td>Soma dos nós de origem vinculados (<i><img
 																	src="/agregateAllowed.png" width="24"></i>)</td>
